tests/scripts/errors/parse/keyword_as_var.cdo
VAR IF = 5;
print(IF);
